--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: tartare
 Type: Package
 Title: Raw ground spectra recorded on Thermo Fisher Scientific mass
     spectrometers
-Version: 1.5.0
+Version: 1.5.1
 Authors@R: c(person(given = "Christian", family = "Panse",
     email = "cp@fgcz.ethz.ch", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-1975-3064")),
@@ -19,11 +19,11 @@ Suggests:
     knitr,
     testthat,
     tools
-Description: provides raw files (size=278MBytes) recorded on different Liquid
+Description: Provides raw files recorded on different Liquid
   Chromatography Mass Spectrometry (LC-MS) instruments. All included MS
   instruments are manufactured by Thermo Fisher Scientific and belong to the
   Orbitrap Tribrid or Q Exactive Orbitrap family of instruments. Despite their
-  common origin and shared hardware components (e.g. Orbitrap mass analyser),
+  common origin and shared hardware components ,e.g., Orbitrap mass analyser,
   the above instruments tend to write data in different "dialects" in a shared
   binary file format (.raw). The intention behind tartare is to provide complex
   but slim real-world files that can be used to make code robust with respect
