--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: tartare
 Type: Package
 Title: Raw ground spectra recorded on Thermo Fisher Scientific mass
     spectrometers
-Version: 1.7.0
+Version: 1.7.1
 Authors@R: c(person(given = "Christian", family = "Panse",
     email = "cp@fgcz.ethz.ch", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-1975-3064")),
@@ -17,6 +17,7 @@ Imports:
 Suggests:
     BiocStyle,
     knitr,
+    rmarkdown,
     testthat,
     tools
 Description: Provides raw files recorded on different Liquid
